first pass at fixing vulns